Fix Java