@@ -15,12 +15,12 @@ public class Program_09_optimal {
 
         while (i < n1 && j < n2) {
             if (arr1[i] <= arr2[j]) {
-                if (union.size() == 0 || union.getLast() != arr1[i]) {
+                if (union.size() == 0 || union.get(union.size() - 1) != arr1[i]) {
                     union.add(arr1[i]);
                 }
                 i++;
             } else {
-                if (union.size() == 0 || union.getLast() != arr2[j]) {
+                if (union.size() == 0 || union.get(union.size() - 1) != arr2[j]) {
                     union.add(arr2[j]);
                 }
                 j++;
@@ -28,13 +28,13 @@ public class Program_09_optimal {
         }
 
         while (i < n1) {
-            if (union.size() == 0 || union.getLast() != arr1[i]) {
+            if (union.size() == 0 || union.get(union.size() - 1) != arr1[i]) {
                 union.add(arr1[i]);
             }
             i++;
         }
         while (j < n2) {
-            if (union.size() == 0 || union.getLast() != arr2[j]) {
+            if (union.size() == 0 || union.get(union.size() - 1) != arr2[j]) {
                 union.add(arr2[j]);
             }
             j++;
@@ -44,8 +44,8 @@ public class Program_09_optimal {
     }
 
     public static void main(String[] args) {
-        int[] arr1 = {1, 3, 3, 7, 9, 9, 9};
-        int[] arr2 = {2, 4, 4, 4, 6, 8, 8, 8, 10};
+        int[] arr1 = { 1, 3, 3, 7, 9, 9, 9 };
+        int[] arr2 = { 2, 4, 4, 4, 6, 8, 8, 8, 10 };
 
         for (int element : getUnion(arr1, arr2)) {
             System.out.print(element + " ");
@@ -53,5 +53,5 @@ public class Program_09_optimal {
     }
 }
 
-// Time-complexity  : O(n1+n2)
+// Time-complexity : O(n1+n2)
 // Space-complexity : O(n1+n2) for returning the union
